--- a/src/livello2.form
+++ b/src/livello2.form
@@ -2028,7 +2028,7 @@
     <Component class="javax.swing.JLabel" name="jLabel286">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/immagini livelli/erba alta.PNG"/>
+          <Image iconType="3" name="/immagini/strada ruotata lv2 49x49.jpg"/>
         </Property>
       </Properties>
     </Component>
@@ -2203,7 +2203,7 @@
     <Component class="javax.swing.JLabel" name="jLabel311">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/immagini livelli/erba alta.PNG"/>
+          <Image iconType="3" name="/immagini/strada ruotata lv2 49x49.jpg"/>
         </Property>
       </Properties>
     </Component>
@@ -2378,21 +2378,21 @@
     <Component class="javax.swing.JLabel" name="jLabel336">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/immagini livelli/erba alta.PNG"/>
+          <Image iconType="3" name="/immagini/strada curva lv2-49x49-alta.jpg"/>
         </Property>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel337">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/immagini livelli/erba alta.PNG"/>
+          <Image iconType="3" name="/immagini/strada lv2-49x49.jpg"/>
         </Property>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel338">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/immagini livelli/erba alta.PNG"/>
+          <Image iconType="3" name="/immagini/strada lv2-49x49.jpg"/>
         </Property>
       </Properties>
     </Component>
