--- a/src/livello2.form
+++ b/src/livello2.form
@@ -2028,7 +2028,7 @@
     <Component class="javax.swing.JLabel" name="jLabel286">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/immagini/strada ruotata lv2 49x49.jpg"/>
+          <Image iconType="3" name="/immagini livelli/erba alta.PNG"/>
         </Property>
       </Properties>
     </Component>
@@ -2189,7 +2189,7 @@
     <Component class="javax.swing.JLabel" name="jLabel309">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/immagini livelli/tagliaerbaLV2-49x49.jpg"/>
+          <Image iconType="3" name="/immagini livelli/erba alta.PNG"/>
         </Property>
       </Properties>
     </Component>
@@ -2203,7 +2203,7 @@
     <Component class="javax.swing.JLabel" name="jLabel311">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/immagini/strada ruotata lv2 49x49.jpg"/>
+          <Image iconType="3" name="/immagini livelli/tagliaerbaLV2-49x49.jpg"/>
         </Property>
       </Properties>
     </Component>
@@ -2378,7 +2378,7 @@
     <Component class="javax.swing.JLabel" name="jLabel336">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/immagini/strada curva lv2-49x49-alta.jpg"/>
+          <Image iconType="3" name="/immagini/strada curva new 49x49 LV2.png"/>
         </Property>
       </Properties>
     </Component>
