--- a/src/NewJFrame.form
+++ b/src/NewJFrame.form
@@ -100,7 +100,7 @@
         <Component class="javax.swing.JLabel" name="imgBlu">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/immagini/blu.png"/>
+              <Image iconType="3" name="/immagini/nero.png"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
@@ -109,7 +109,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="515" y="188" width="267" height="150"/>
+              <AbsoluteConstraints x="515" y="178" width="267" height="160"/>
             </Constraint>
           </Constraints>
         </Component>
